--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,9 @@
     <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
     
+    <!-- Font Awesome-->
+    <script src="https://kit.fontawesome.com/69e4209a61.js" crossorigin="anonymous"></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
@@ -23,34 +26,38 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light techfont">
-  <a class="navbar-brand bigbrand" href="{% url post_list%}">My Blog</a>
+  <a class="navbar-brand bigbrand" href="{% url 'post_list' %}">My Blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'about'%}">About</a>
+        <a class="nav-link" href="{% url 'about' %}">About</a>
       </li>
     </ul>
 
-    <ul class="navbar-nav navbar-right">
+    <ul class="navbar-nav ml-auto">
         
         {% if user.is_authenticated %}
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'post_new'%}">New Post</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'post_draft_list'%}">Drafts</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'logout'%}">Logout</a>
         </li>
-        <li>
-            <a href="">Welcome {{user.username}}</a>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Welcome: {{user.username}}</a>
         </li>
         {% else %}
-        <li><a class="nav navbar-right" href="{% url 'login' %}"><span class="glyphicon glyphicon-user"></span></a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">
+                <i class="far fa-user"></i>
+            </a>
+        </li>
         {% endif %}
     </ul>
   </div>
