--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,21 +11,21 @@
     </div>
 
 {% else %}
-    <a href="{% url 'post_publish'%}" class="btn btn-default">Publish</a>
+    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-default">Publish</a>
 
 {% endif %}
     
 <p>
-    {{post.title|safe|linebreaksbr}}
+    {{post.text|safe|linebreaksbr}}
 </p>
 
 
 {% if user.is_authenticated %}
     <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
-        <span class="glyphicon glyphicon-pencil"></span>
+        <i class="fas fa-pencil-alt"></i>
     </a>
     <a href="{% url 'post_remove' pk=post.pk %}" class="btn btn-danger">
-        <span class="glyphicon glyphicon-remove"></span>
+        <i class="fas fa-trash"></i>
     </a>    
 {% endif %}
     
@@ -43,10 +43,10 @@
             {% if not comment.approved_comment %}
 
                 <a href="{% url 'comment_remove' pk=comment.pk %}" class="btn btn-danger">
-                    <span class="glyphicon glyphicon-remove"></span>
+                    <i class="fas fa-trash"></i>
                 </a>
-                <a href="{% url 'post_approve' pk=comment.pk %}" class="btn btn-success">
-                    <span class="glyphicon glyphicon-ok"></span>
+                <a href="{% url 'comment_approve' pk=comment.pk %}" class="btn btn-success">
+                    <i class="fas fa-check"></i>
                 </a> 
 
             {% endif %}
