fixed bugs and added styles

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<h1>About Me</h1>
-<p>Thanks for checking it out!</p>
+<div class="jumbotron">
+    <h3>About Me</h3>
+    <hr>
+    <p>Here, write something about yourself.</p>
+</div>
 
 {% endblock content %}
