--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,13 +1,19 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
-    <h1>New comment</h1>
-    <form method="POST" class="post-form">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="save btn btn-default">Post Comment</button>
-    </form>
+{% load crispy_forms_tags %}
 
-    <script>var editor = new MediumEditor('.editable');</script>
+{% block content %}
+
+<div class="jumbotron">
+    <h3>Write a comment</h3>
+    <hr>
+    <form method="POST">
+        {% csrf_token %}
+        {{form|crispy}}
+        <button type="submit" class="btn brand-bg">Comment</button>
+    </form>
+</div>
+
+<script>var editor = new MediumEditor('.editable');</script>
 
 {% endblock %}
