--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,63 +1,82 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 {% block content %}
 
-<h1 class="posttitle loader">{{post.title}}</h1>
-
-
-{% if post.published_date %}
-    <div class="date postdate">
-        {{post.published_date}}
-    </div>
-
-{% else %}
-    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-default">Publish</a>
-
-{% endif %}
-    
-<p>
-    {{post.text|safe|linebreaksbr}}
-</p>
-
-
-{% if user.is_authenticated %}
-    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
-        <i class="fas fa-pencil-alt"></i>
-    </a>
-    <a href="{% url 'post_remove' pk=post.pk %}" class="btn btn-danger">
-        <i class="fas fa-trash"></i>
-    </a>    
-{% endif %}
-    
-<hr>
-<a class="btn btn-success" href="{% url 'add_comment_to_post' pk=post.pk %}">
-    Add Comment
-</a>
-
-<div class="container">
-    {% for comment in post.comments.all %}
-        
-        {% if user.is_authenticated or comment.approved_comment %}
-            {{comment.created_date}}
-            
-            {% if not comment.approved_comment %}
-
-                <a href="{% url 'comment_remove' pk=comment.pk %}" class="btn btn-danger">
-                    <i class="fas fa-trash"></i>
+<div class="card">
+    <div class="card-header">
+    {% if post.published_date %}
+        <span class="float-right text-muted">
+            Published on {{post.published_date}}
+        </span>
+    {% else %}
+        <a href="{% url 'post_publish' pk=post.pk %}" class="btn float-right brand-bg">Publish</a>
+    {% endif %}
+    </div> <!-- /.card-header -->
+    <div class="card-body p-4">
+        <div class="card-text">
+            <span class="title">{{post.title}}</span>
+            <div class="float-right">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_edit' pk=post.pk %}" class="btn-sm btn-link">
+                    <i class="fas fa-pencil-alt fa-lg"></i>
                 </a>
-                <a href="{% url 'comment_approve' pk=comment.pk %}" class="btn btn-success">
-                    <i class="fas fa-check"></i>
-                </a> 
-
+                <a href="{% url 'post_remove' pk=post.pk %}" class="btn-sm btn-link">
+                    <i class="fas fa-trash-alt fa-lg"></i>
+                </a>    
             {% endif %}
-            <p>{{comment.text|safe|linebreaks}}</p>
-            <p>Posted By: {{comment.author}}</p>
-        {% endif %}
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <p class="card-text">{{post.text|safe|linebreaksbr}}</p>
+        <a class="btn brand-bg" href="{% url 'add_comment_to_post' pk=post.pk %}">
+            Add Comment
+        </a>
+    </div> <!-- /.card-body -->
 
-        {% empty %}
-            <p>No comments!</p>    
-    
-    {% endfor %}
-</div>
+    {% if post.approve_comments.count > 0 or user.is_authenticated and post.comments.count > 0 %}
+    <div class="card">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#comments">
+                        {{post.approve_comments.count}} comment{{post.approve_comments.count|pluralize}}
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <div class="tab-content mt-3">
+                <div id="comments" class="tab-pane fade show active">
+                {% for comment in post.comments.all %}
+                    <div class="box-comment">
+                        <!-- User image -->
+                        <img class="rounded-circle" src="{% static 'images/avatar2.png' %}" alt="User Image">
+                        <div class="comment ml-5">
+                            <div class="float-left font-weight-bold">{{comment.author}}</div>
+                            <div class="float-right text-muted small">                        
+                            {% if user.is_authenticated or comment.approved_comment %}
+                                {{comment.created_date}}                
+                                {% if not comment.approved_comment %}
+                                <a href="{% url 'comment_remove' pk=comment.pk %}" class="btn-sm btn-link">
+                                    <i class="fas fa-times-circle fa-lg" style="color: red"></i>
+                                </a>
+                                <a href="{% url 'comment_approve' pk=comment.pk %}" class="btn-sm btn-link">
+                                    <i class="fas fa-check-circle fa-lg" style="color: green"></i>
+                                </a> 
+                                {% endif %}
+                            {% endif %}
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="comment-body">{{comment.text|safe|linebreaksbr}}</div>
+                        </div><!-- /.comment -->
+                    </div> <!-- /.box-comment -->              
+                {% endfor %}
+                </div> <!-- /.comments --> 
+            </div> <!-- /.tab-content -->
+        </div> <!-- /.card-body -->
+    </div> <!-- /.card -->
+</div> <!-- /.card -->
+
+{% endif %}
 
 {% endblock content %}
