--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,11 +1,34 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
+{% load myfilters %}
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|truncatechars:200 }}</p>
-        </div>
-    {% endfor %}
+
+<h3>Drafts</h3>
+<hr>
+
+{% for post in post_list %}
+
+<div class="box">   	
+	<div class="user-block">
+		<img class="rounded-circle mt-2" src="{% static 'images/avatar.png' %}" alt="User Image">
+		<div class="ml-5">
+			<a href="{% url 'post_detail' pk=post.pk %}">
+				<span class="title d-block">{{post.title}}</span>
+			</a>
+			<span class="text-muted small">
+				by {{post.author}}, created on {{post.created_date|date:"D M Y"}}
+			</span>
+		</div>
+	</div><!-- /.user-block -->
+	<div class="post-block py-3">
+		<div class="post-body">
+			{{post.text|safe|linebreaksbr|truncatewords:50}}
+		</div> 
+	</div><!-- ./post-block -->
+</div>    
+    
+{% empty %}
+    <p>There is no draft at this moment!</p>
+{% endfor %}
+
 {% endblock %}
