--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="card">
+<div class="card mb-4">
     <div class="card-header">
     {% if post.published_date %}
         <span class="float-right text-muted">
