--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark brand-bg">
     <a class="navbar-brand" href="{% url 'post_list' %}">My Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
     </div>
 </nav>
 
-<div class="container my-3">
+<div class="container">
     {% block content %}
     {% endblock content %}
 </div>
