--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -45,10 +45,10 @@ a:hover, .btn-link:hover {
 }
 
 .box {
-    margin: 20px 0px 30px 10px;
+    margin: 20px 0 30px 10px;
     padding: 30px 20px;
     border-bottom: 2px solid #eee;
-    box-shadow: 0px 1px 4px 0px #bbb;
+    box-shadow: 0 1px 4px 0 #bbb;
 }
 
 .title {
